Added styles for badges

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,9 +1,15 @@
 @import "./variables.scss";
 @import "./alert.scss";
+@import "./badges.scss";
 @import "./buttons.scss";
 
+
+* {
+  box-sizing: border-box;
+}
+
 body {
-  max-width: $container-size;
+  max-width: $container-width;
   margin: 0 auto;
   font-family: sans-serif;
 }
