--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -12,3 +12,6 @@ $secondary-color: #6c757d !default;
 $dark-color: #343a40 !default;
 $text-color: #212529 !default;
 $light-color: #f8f9fa !default;
+
+// Breadcrumb Divider
+$breadcrumb-divider: '/';
