Added the js code and code to the html

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -2,6 +2,7 @@
 @import './alert.scss';
 @import './badges.scss';
 @import './buttons.scss';
+@import './cards.scss';
 @import './breadcrumbs.scss';
 
 * {
