--- a/src/scss/cards.scss
+++ b/src/scss/cards.scss
@@ -1,7 +1,10 @@
 .customcard {
-  width: 200px;
-  height: 150px;
-  padding: 20px;
+  display: inline-block;
+  border-radius: 1em;
+  padding: .25em .5em;
+  margin: 0 .3em;
+  font-size: .8em;
   background-color: $dark-color;
-  border: 2px solid $dark-color;
+  border: 1px solid $dark-color;
+  color: $light-color;
 }
